--- a/src/Complete Loading Screen Collection for MM+/Complete Loading Screen Collection for MM+.vcxproj
+++ b/src/Complete Loading Screen Collection for MM+/Complete Loading Screen Collection for MM+.vcxproj
@@ -174,6 +174,9 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SprNswgamCmnLayers.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
