--- a/src/Complete Loading Screen Customizable for MM+/Complete Loading Screen Customizable for MM+.vcxproj
+++ b/src/Complete Loading Screen Customizable for MM+/Complete Loading Screen Customizable for MM+.vcxproj
@@ -160,6 +160,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\detours;$(SolutionDir)dependencies</AdditionalIncludeDirectories>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <UseFullPaths>false</UseFullPaths>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -173,6 +174,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SprNswgamCmnLayers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
