Use multithreading & std::cerr for console logs

--- a/src/Complete Loading Screen Collection for MM+/Complete Loading Screen Collection for MM+.vcxproj
+++ b/src/Complete Loading Screen Collection for MM+/Complete Loading Screen Collection for MM+.vcxproj
@@ -160,6 +160,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\detours;$(SolutionDir)dependencies</AdditionalIncludeDirectories>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <UseFullPaths>false</UseFullPaths>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
