--- a/src/Complete Loading Screen Customizable for MM+/Complete Loading Screen Customizable for MM+.vcxproj
+++ b/src/Complete Loading Screen Customizable for MM+/Complete Loading Screen Customizable for MM+.vcxproj
@@ -160,7 +160,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\detours;$(SolutionDir)dependencies</AdditionalIncludeDirectories>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <UseFullPaths>false</UseFullPaths>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
