Code cleanup / Use multithreading & std::cerr for console logs / options for smaller and colored targets

--- a/src/X UI for MM+/X UI for MM+.vcxproj
+++ b/src/X UI for MM+/X UI for MM+.vcxproj
@@ -160,6 +160,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\detours;$(SolutionDir)dependencies</AdditionalIncludeDirectories>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <UseFullPaths>false</UseFullPaths>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -173,12 +174,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="xui.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="cpp.hint" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="SprGamCmnLayers.h" />
+    <ClInclude Include="xui.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
